<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/n_perfil"
        android:title=""
        android:enabled="false"
        app:actionLayout="@layout/nav_perfil"/>

    <item android:title="@string/alertas">
        <menu>
            <item
                android:id="@+id/nav_alarma"
                android:title="@string/alerta_mercados"
                android:checkable="true"
                android:checked="false"/>
        </menu>
    </item>

    <item android:title="@string/idim">
        <menu>
            <item
                android:id="@+id/nav_1"
                android:title="🇪🇸 Español"
                android:checkable="true"/>
            <item
                android:id="@+id/nav_2"
                android:title="🇬🇧 English"
                android:checkable="true"/>
            <item
                android:id="@+id/nav_3"
                android:title="🇩🇪 Deutsch"
                android:checkable="true"/>
        </menu>
    </item>
</menu>