<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Saludo">

    <ImageView
        android:id="@+id/iconImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="248dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/stock_nom"
        android:src="@drawable/stock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_not_logged_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tvAuthTitle, tvAuthSubtitle, btnLogin, btnRegistro"
        android:visibility="visible" /> <TextView
    android:id="@+id/tvAuthTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="@string/app_name"
    android:textColor="@android:color/white"
    android:textSize="28sp"
    android:textStyle="bold"
    app:layout_constraintTop_toBottomOf="@id/iconImage"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvAuthSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/a"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvAuthTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="40dp"
        android:paddingVertical="12dp"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/white"
        app:cornerRadius="25dp"
        app:layout_constraintTop_toBottomOf="@id/tvAuthSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegistro"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="16dp"
        android:paddingVertical="12dp"
        android:text="@string/registrarse"
        android:textColor="@color/white"
        app:cornerRadius="25dp"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>